added the listeners to add everything

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -7,11 +7,12 @@
     <title>Chess</title>
     <script src="/socket.io/socket.io.js" defer></script>
     <script type='module' src="js/script.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
     <h1>This is a chess page</h1>
 
     <input type="text" id="move">
-    <button onclick="(e)=>e.preventDefault()">Submit move</button>
+    <button>Submit move</button>
 </body>
 </html>
